--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Intro to JS Debrief</title>
-       
+         <!-- Link to JavaScript file-->
+         <script src="js/app.js"></script>
     </head>
     <body>
         <h1>Intro to JS Debrief</h1>
@@ -10,6 +11,26 @@
             
         </main>    
             <!-- Link to JavaScript file-->
-            <script src="js/app.js"></script>
+            <!--script src="js/app.js"></!script-->
+
+            <h1 style="color:green;padding:13px;">
+                Put number</h1>
+                <div id="console"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </body>
 </html>
