Fixed input validation

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>Intro to JS Debrief</title>
-         <!-- Link to JavaScript file-->
-         <script src="js/app.js"></script>
+         
     </head>
     <body>
         <h1>Intro to JS Debrief</h1>
@@ -13,24 +12,11 @@
             <!-- Link to JavaScript file-->
             <!--script src="js/app.js"></!script-->
 
-            <h1 style="color:green;padding:13px;">
-                Put number</h1>
-                <div id="console"></div>
+            <!--h1 style="color:green;padding:13px;">
+                Put number</!--h1-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                <!-- <div id="output"></div> -->
+             <!-- Link to JavaScript file-->
+         <script src="js/app.js"></script>
     </body>
 </html>
